src/app/components/map/create/create.component.scss
@import '../../../../assets/availa/sizes/margins.scss';

.selector-geolocation-map {
    width: 100%;
    overflow: hidden;
    .filter {
        margin-top: $margin-x-small;
        width: 60%;
    }
    .address-form {
        margin-top: $margin-x-medium;
        margin-bottom: $margin-x-medium;
        mat-form-field {
            margin: 0 $margin-x-small $margin-small 0;
        }
    }
    .filter-results {
        display: flex;
        .filter-selection {
            min-width: 50%;
            width: 100%;
            mat-selection-list {
                width: 100%;
                mat-list-option {
                    div {
                        display: flex;
                        align-items: center;
                    }
                }
            }
        }
        .map {
            display: flex;
            justify-content: center;
            .map-spinner {
                position: absolute;
                z-index: 9999;
                margin: 10em;
            }
        }
        div {
            width: 100%;
        }
    }
}

